crates/cb-sema/tests/snapshots/lower_snapshots__struct_copy_assignment.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
expression: ir
---
fn @main() -> Void {
  locals:
    local0: p (StructVal(vec2))
    local1: q (StructVal(vec2))

  bb0:
    r0 = const_int 1
    store_place local0.x, r0
    r1 = load_local local0
    store_local local1, r1
    r2 = const_int 99
    store_place local1.x, r2
    return
}
