crates/cb-sema/tests/snapshots/lower_snapshots__while_break_continue.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
expression: ir
---
fn @main() -> Void {
  locals:
    local0: i (Int)

  bb0:
    goto bb1
  bb1:
    r0 = load_local local0
    r1 = const_int 10
    r2 = lt r0, r1
    branch_if r2, bb2, bb3
  bb2:
    r3 = load_local local0
    r4 = const_int 1
    r5 = add r3, r4
    store_local local0, r5
    r6 = load_local local0
    r7 = const_int 3
    r8 = eq r6, r7
    branch_if r8, bb5, bb4
  bb3:
    return
  bb4:
    r9 = load_local local0
    r10 = const_int 5
    r11 = eq r9, r10
    branch_if r11, bb7, bb6
  bb5:
    goto bb1
  bb6:
    goto bb1
  bb7:
    goto bb3
}
