crates/cb-sema/tests/snapshots/lower_snapshots__while_loop.snap
---
source: crates/cb-sema/tests/lower_snapshots.rs
assertion_line: 54
expression: ir
---
fn @main() -> Void {
  locals:
    local0: i (Int)

  bb0:
    goto bb1
  bb1:
    r0 = load_local local0
    r1 = const_int 10
    r2 = lt r0, r1
    branch_if r2, bb2, bb3
  bb2:
    r3 = load_local local0
    r4 = const_int 1
    r5 = add r3, r4
    store_local local0, r5
    goto bb1
  bb3:
    return
}
